# VRengine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/: CMakeLists.txt
assets/scenes/: basic.gltf
assets/shaders/: CMakeLists.txt  shader.vert
src/: application.cpp  application.hpp  common.hpp  helpers.cpp  helpers.hpp  main.cpp  scene.hpp
src/platform/: platform.cpp  platform.hpp
src/rendering/: buffers.cpp  buffers.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_set_allocator.cpp  descriptor_set_allocator.hpp  image.cpp  image.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  render_core.cpp  render_core.hpp  render_pass.cpp  render_pass.hpp  shader.cpp  shader.hpp  uniform_buffer_allocator.cpp  uniform_buffer_allocator.hpp
src/scene/: attachable.hpp  camera.cpp  camera.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
src/serialization/: gltf_loader.cpp  gltf_loader.hpp
